# RatHindlimb

./: .gitignore  .gitmodules  Makefile  QUARTO_WORKAROUND.md  README.md  _quarto.yml  control_group.py  environment.yml  execute_notebook.py  index.qmd  johnson_pelvis.csv  main.py  mjcf_testing.ipynb  model_edits.ipynb  model_edits.qmd  model_edits_executed.html  model_edits_executed.ipynb  model_edits_partial.ipynb  muscle_attachment_rework.ipynb  old_comparison.ipynb  pipeline.ipynb  pipeline.yml  preview_model_edits.sh  pyproject.toml  rat_hindlimb_0.1.osim  rat_hindlimb_3.osim  rat_hindlimb_millard_tsl.osim  rat_hindlimb_millard_tsl_young_bfa.osim  render_model_edits.sh  test_simple_execute.py  watch_and_render.py  young_pelvis.csv
.jupyter_cache/: global.db
Geometry/: foot_l.stl  pelvis_r_y2j.stl
data/: .~lock.data.ods#  control_group_results.json  data.ods  johnson_tibia.csv  muscle_abbreviations.csv  muscle_attachments.csv  young_model_attachments.csv  young_tibia.csv
debug_meshes/: 1_source_orig.ply  2_source_normalized.ply  3_source_registered_normalized.ply
docs/: QUARTO_WORKAROUND.md  README_CACHE.md
meshes/: LHFemurg.stl  femur_r_johnson.stl  foot.stl  foot_johnson.stl  foot_r_young.stl  foot_r_young_no_phalanges.stl  pelvis.stl  pelvis_l_young.stl  pelvis_r_young.stl  pelvis_young.blend  spine_young.stl  tibia_r_johnson.stl
models/: rat_hindlimb.osim  rat_hindlimb.xml  rat_hindlimb_bilateral.osim  rat_hindlimb_bilateral_markerset.xml  rat_hindlimb_millard.osim  rat_hindlimb_millard_tsl.osim  rat_hindlimb_millard_y2j.osim  rat_hindlimb_mocap.xml  (+8 more)
(+269 files in other folders)
