[project]
name = "rathindlimb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "nbformat>=5.10.4",
    "numpy>=2.3.4",
    "open3d>=0.19.0",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "pyopensim>=4.5.2.0",
    "scipy>=1.16.3",
]
